objects/Diabetes_Coaching_Session__c.object
<CustomObject>
    <fields>
        <fullName>Coaching_Date__c</fullName>
        <label>Coaching Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Coaching_Description__c</fullName>
        <label>Coaching Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Patient</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Diabetes Coaching Sessions</relationshipLabel>
        <relationshipName>Diabetes_Coaching_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session_Type__c</fullName>
        <label>Session Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Short</fullName>
                </value>
                <value>
                    <fullName>Extended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Diabetes Coaching Session</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Diabetes Coaching Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Diabetes Coaching Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>